--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
             <span class="navbar-toggler-icon"></span>
             </button>
             <div class="ms-auto text-end">
-              <img src="img/bike.png">
+              <div>
+                <img src="img/bike.png">
               <span class="h-content">Express Delivery +1 234 567 890</span>
+              </div>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
@@ -106,8 +108,8 @@
                   <img src="img/banner3.png" class="img-fluid b3">
                   <div class="ad-content ad-design">
                     <a href="">
-                      <p>try it today</p>
-                      <h6>fresh & chili</h6>
+                      <p class="ad-m">try it today</p>
+                      <h6 class="ad-m">fresh & chili</h6>
                     </a>
                   </div>
                 </div>
